<resources>
    <string name="app_name">Care Action</string>
    <string name="hello_world">Hello World</string>
    <string name="toast_back_to_exit">Press back again to exit</string>
    <string name="activity_not_found_error_message">Activity cannot be null</string>
    <string name="btn_login">Login</string>
    <string name="txt_view_login_tittle">Welcome Back</string>
    <string name="txt_view_login_link">Already have an account? Login</string>
    <string name="txt_field_email_hint">Email</string>
    <string name="txt_field_password_hint">Password</string>
    <string name="email_required_error_message">The email field is required</string>
    <string name="password_required_error_message">The password field is required</string>
    <string name="email_format_not_valid_error_message">Email address must have a valid format</string>
    <string name="password_length_below_minimum_error_message">Password length must be at least 8 character</string>
    <string name="btn_register">Register</string>
    <string name="txt_view_register_tittle">Create an account</string>
    <string name="txt_view_register_link">Don\’t have an account yet? Register</string>
    <string name="txt_field_name_hint">Name</string>
    <string name="check_box_policy_hint">By continuing you accept our Privacy Policy and Term of Use</string>
    <string name="name_required_error_message">The name field is required</string>
    <string name="name_below_minimum_error_message">Name length must be at least 3 character</string>
    <string name="btn_next">Next</string>
    <string name="txt_view_kg">KG</string>
    <string name="txt_view_cm">CM</string>
    <string name="txt_view_years_old">YO</string>
    <string name="txt_view_register_profile_tittle">Let\’s Complete Your Profile</string>
    <string name="txt_field_height_hint">Height</string>
    <string name="txt_field_weight_hint">Weight</string>
    <string name="txt_field_date_of_birth_hint">Date Of Birth</string>
    <string name="spinner_gender_prompt">Choose Gender</string>
    <string-array name="gender_items">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string name="gender_required_error_message">Gender needs to be selected</string>
    <string name="weight_required_error_message">The weight field is required</string>
    <string name="height_required_error_message">The height field is required</string>
    <string name="height_must_valid_error_message">Height must have a valid value</string>
    <string name="weight_must_valid_error_message">Weight must have a valid value</string>
    <string name="date_of_birth_required_error_message">The date of birth field is required</string>
    <string name="btn_edit">Edit</string>
    <string name="btn_logout">Logout</string>
    <string name="btn_contact_us">Contact Us</string>
    <string name="btn_privacy">Privacy Policy</string>
    <string name="btn_achievement">Achievement</string>
    <string name="btn_change_password">Change Password</string>
    <string name="btn_activity_history">Activity History</string>
    <string name="btn_workout_progress">Workout Progress</string>
    <string name="txt_view_age">Age</string>
    <string name="txt_view_other">Other</string>
    <string name="txt_view_account">Account</string>
    <string name="txt_view_profile_tittle">Profile</string>
    <string name="txt_view_notification">Notification</string>
    <string name="txt_view_show_notification">Show Notification</string>
    <string name="btn_save">Save</string>
    <string name="update_profile_success_message">"Your profile has been updated"</string>
    <string name="txt_field_new_password_hint">New Password</string>
    <string name="txt_view_update_password_tittle">Change Password</string>
    <string name="txt_field_current_password_hint">Current Password</string>
    <string name="txt_field_confirmation_password_hint">Confirm New Password</string>
    <string name="update_password_success_message">"Your password has been updated"</string>
    <string name="new_password_required_error_message">The new password field is required</string>
    <string name="current_password_required_error_message">The current password field is required</string>
    <string name="confirmation_password_required_error_message">The confirmation password field is required</string>
    <string name="new_password_same_error_message">New password can\'t be the same as your current password</string>
    <string name="not_same_confirmation_password_error_message">Confirmation password must be the same as the new password</string>
    <string-array name="txt_view_landing_tittle">
        <item>Stay Fit With Us</item>
        <item>Get Burn</item>
        <item>Eat Well</item>
    </string-array>
    <string-array name="txt_view_landing_content">
        <item>We want to make you always doing healthy lifestyle for a better life</item>
        <item>Let\'s Keep Burning, to get better living in health. Get your body goals</item>
        <item>Start implementing a balanced diet, healthy eating is fun. Prep your own meal</item>
    </string-array>
    <string name="btn_reload">Reload</string>
    <string name="unknown_error_tittle">Uh oh..</string>
    <string name="connection_error_tittle">Whoops..</string>
    <string name="unknown_error_content">There\'s problem \n We can\'t load this data :(</string>
    <string name="connection_error_content">Connection Lost :( \n Please check your network</string>
    <string name="btn_view_more">View More</string>
    <string name="txt_view_activity_tracker_tittle">Activity Tracker</string>
    <string name="txt_view_news">News</string>
    <string name="txt_view_category">Category</string>
    <string name="txt_view_recommend_news">Recommend News</string>
    <string name="txt_view_bmi_tittle">BMI (Body Mass Index)</string>
    <string name="txt_view_on_progress_tittle">COMING SOON</string>
    <string name="btn_back_to_main_menu">Back to main menu</string>
    <string name="txt_view_on_progress_content">We are currently working very hard on this page</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>